@@ -96,6 +96,8 @@
 #define DEFAULT_FORMAT_DISCONNECT_FSET "$G Use %G/Server%n to connect to a server"
 #define DEFAULT_FORMAT_ENCRYPTED_NOTICE_FSET "%K-%Y$1%K(%p$2%K)-%n $3-"
 #define DEFAULT_FORMAT_ENCRYPTED_PRIVMSG_FSET "%K[%Y$1%K(%p$2%K)]%n $3-"
+#define DEFAULT_FORMAT_ENCRYPTED_PUBLIC_FSET "%Y<%n$1%K/%n$3%Y>%n $4-"
+#define DEFAULT_FORMAT_ENCRYPTED_PUBLIC_NOTICE_FSET "%Y-%n$1%K/%n$3%Y-%n $4-"
 #define DEFAULT_FORMAT_FLOOD_FSET "%Y$1%n flood detected from %G$2%K(%g$3%K)%n on %K[%G$4%K]"
 #define DEFAULT_FORMAT_FRIEND_JOIN_FSET "$G %R$1 %K[%c$2%K]%n has joined $3"
 #define DEFAULT_FORMAT_HELP_FSET "$0-"
@@ -529,6 +531,8 @@
 #define DEFAULT_FORMAT_DISCONNECT_FSET "$G Use %G/Server%n to connect to a server"
 #define DEFAULT_FORMAT_ENCRYPTED_NOTICE_FSET "%@%K-%Y$1%K(%p$2%K)-%n $3-"
 #define DEFAULT_FORMAT_ENCRYPTED_PRIVMSG_FSET "%@%K[%Y$1%K(%p$2%K)]%n $3-"
+#define DEFAULT_FORMAT_ENCRYPTED_PUBLIC_FSET "%@%Y<%n$1%K/%n$3%Y>%n $4-"
+#define DEFAULT_FORMAT_ENCRYPTED_PUBLIC_NOTICE_FSET "%@%Y-%n$1%K/%n$3%Y-%n $4-"
 #define DEFAULT_FORMAT_FLOOD_FSET "%Y$1%n flood detected from %G$2%K(%g$3%K)%n on %K[%G$4%K]"
 #define DEFAULT_FORMAT_FRIEND_JOIN_FSET "$G %R$1 %K[%c$2%K]%n has joined $3"
 #define DEFAULT_FORMAT_HELP_FSET "$0-"
