@@ -195,6 +195,8 @@ FORMAT_EBANS_FOOTER_FSET,
 FORMAT_EBANS_HEADER_FSET,
 FORMAT_ENCRYPTED_NOTICE_FSET,
 FORMAT_ENCRYPTED_PRIVMSG_FSET,
+FORMAT_ENCRYPTED_PUBLIC_FSET,
+FORMAT_ENCRYPTED_PUBLIC_NOTICE_FSET,
 FORMAT_FLOOD_FSET,
 FORMAT_FRIEND_JOIN_FSET,
 FORMAT_HELP_FSET,
