@@ -80,6 +80,8 @@ IrcVariable fset_array[] =
 	{ "EBANS_HEADER",	0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
 	{ "ENCRYPTED_NOTICE",	0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
 	{ "ENCRYPTED_PRIVMSG",	0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
+	{ "ENCRYPTED_PUBLIC",	0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
+	{ "ENCRYPTED_PUBLIC_NOTICE",	0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
 	{ "FLOOD",		0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
 	{ "FRIEND_JOIN",		0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
 	{ "HELP",		0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
@@ -597,6 +599,8 @@ void create_fsets(Window *win, int ansi)
 	fset_string_var(FORMAT_DISCONNECT_FSET, DEFAULT_FORMAT_DISCONNECT_FSET);
 	fset_string_var(FORMAT_ENCRYPTED_NOTICE_FSET, DEFAULT_FORMAT_ENCRYPTED_NOTICE_FSET);
 	fset_string_var(FORMAT_ENCRYPTED_PRIVMSG_FSET, DEFAULT_FORMAT_ENCRYPTED_PRIVMSG_FSET);
+	fset_string_var(FORMAT_ENCRYPTED_PUBLIC_FSET, DEFAULT_FORMAT_ENCRYPTED_PUBLIC_FSET);
+	fset_string_var(FORMAT_ENCRYPTED_PUBLIC_NOTICE_FSET, DEFAULT_FORMAT_ENCRYPTED_PUBLIC_NOTICE_FSET);
 	fset_string_var(FORMAT_FLOOD_FSET, DEFAULT_FORMAT_FLOOD_FSET);
 	fset_string_var(FORMAT_FRIEND_JOIN_FSET, DEFAULT_FORMAT_FRIEND_JOIN_FSET);
 	fset_string_var(FORMAT_HELP_FSET, DEFAULT_FORMAT_HELP_FSET);
